# drg-editor

./: .gitignore  Cargo.toml  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
assets/: icon.xcf
cli/: main.rs
data/: struct-patterns.json
editor/: editor.rs  internal.rs  main.rs  plugins.rs  property_creator.rs  property_editor.rs  support.rs  tools.rs
editor/editor/: internal.rs  plugins.rs  tools.rs
editor/editor/keyboard/: mod.rs
editor/editor/operations/: mod.rs
editor/operations/: io.rs  mod.rs
guides/: add-weapon.md  readme.md
src/: asset.rs  asset_registry.rs  bindings.rs  editor.rs  export_map.rs  file_summary.rs  lib.rs  main-gui.rs  main.rs  name_map.rs  object_imports.rs  preload_dependencies.rs  property.rs  reader.rs  util.rs
src/asset/: asset_registry.rs  depends.rs  export_map.rs  exports.rs  file_summary.rs  imports.rs  name_map.rs  names.rs  object_imports.rs  preload_dependencies.rs  property.rs  reference.rs
src/asset/property/: context.rs  meta.rs  mod.rs  prop_type.rs  struct_pattern.rs
src/asset/property/loaders/: array.rs  map.rs  mod.rs  other.rs  simple.rs  strct.rs
src/editor/: internal.rs  plugins.rs  support.rs  tools.rs
src/editor/keyboard/: mod.rs
src/editor/operations/: io.rs  mod.rs
src/editor/support/: clipboard.rs
