[package]
name = "drg-editor"
version = "0.1.0"
authors = ["craigmc08 <craigmc08@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "drg"
path = "src/lib.rs"

[[bin]]
name = "drg-cli"
path = "cli/main.rs"

[[bin]]
name = "drg-editor"
path = "editor/main.rs"

[dependencies]
byteorder = "1.4.3"
imgui = "0.7.0"
imgui-winit-support = "0.7.0"
imgui-glium-renderer = "0.7.0"
winit = "0.25.0"
glium = "0.29.1"
clipboard = "0.5.0"
tinyfiledialogs = "3.0"
anyhow = "1.0"
strum = "0.20"
strum_macros = "0.20"
walkdir = "2"
serde_json = "1.0"
clap = "2.33.3"
rayon = "1.5.1"
indicatif = { version = "0.16.2", features = [ "rayon" ] }
